[gd_scene load_steps=38 format=3 uid="uid://5qgb1rmcwvmq"]

[ext_resource type="Script" path="res://Menus/DrivingEnding.gd" id="1_ppvel"]
[ext_resource type="PackedScene" uid="uid://bxd6mc5xyl0o7" path="res://Menus/TimerDisplay.tscn" id="2_u5gd3"]
[ext_resource type="Script" path="res://InteractableObjects/AchievementHandler_Ending.gd" id="2_vuask"]
[ext_resource type="FontFile" uid="uid://hcb3an67qg80" path="res://Menus/UnderTheFeetOfMany4.otf" id="3_yyik2"]
[ext_resource type="PackedScene" uid="uid://ykbih12rrilw" path="res://Menus/DialogueBox.tscn" id="4_kprul"]
[ext_resource type="Texture2D" uid="uid://dlsidcxns8i4o" path="res://Graphics/MainMenu_bg.png" id="9_eeuhh"]
[ext_resource type="Texture2D" uid="uid://dmhete1n30yr2" path="res://Graphics/Macguffin3_Driving.png" id="10_56rcf"]
[ext_resource type="Script" path="res://Menus/MainMenuBg.gd" id="10_oc5si"]
[ext_resource type="Texture2D" uid="uid://qc1b77ocktna" path="res://Graphics/MainMenu_Parallax0.png" id="11_bli12"]
[ext_resource type="Script" path="res://Menus/MenuParallax.gd" id="12_6jddx"]
[ext_resource type="Texture2D" uid="uid://48pt8xcc7xgs" path="res://Graphics/MainMenu_Parallax0_1.png" id="13_kp5pk"]
[ext_resource type="Script" path="res://Menus/MainMenuAudioPlayer.gd" id="14_hcc3f"]
[ext_resource type="Texture2D" uid="uid://drtennaimv54h" path="res://Graphics/MainMenu_Parallax1.png" id="14_k0h56"]
[ext_resource type="Texture2D" uid="uid://hcfiija3i00e" path="res://Graphics/MainMenu_Parallax3.png" id="15_0a4tv"]
[ext_resource type="Texture2D" uid="uid://py4lmq1p22cl" path="res://Graphics/Macguffin.png" id="15_byy4g"]
[ext_resource type="Texture2D" uid="uid://bvgahsb25gax4" path="res://Graphics/MainMenu_Parallax4.png" id="16_bo388"]
[ext_resource type="Texture2D" uid="uid://dknf6lpk8dfhd" path="res://Graphics/Macguffin2.png" id="16_ktxi7"]
[ext_resource type="AudioStream" uid="uid://cc0ytk8rtn7av" path="res://SFX/CarEngine.mp3" id="17_3syp1"]
[ext_resource type="Texture2D" uid="uid://b6v0ukxnglwxk" path="res://Graphics/MainMenu_Parallax2_1.png" id="17_tewdt"]
[ext_resource type="Texture2D" uid="uid://debbh1xump61i" path="res://Graphics/MainMenu_Parallax5.png" id="18_j4rsn"]
[ext_resource type="AudioStream" uid="uid://cth75cdh8gdu6" path="res://SFX/CarEngineStart.mp3" id="18_t534n"]
[ext_resource type="AudioStream" uid="uid://cdhw13gyuaiuu" path="res://SFX/StartGame.mp3" id="19_ewooo"]
[ext_resource type="Texture2D" uid="uid://bvwjjfcaytj3s" path="res://Graphics/MainMenu_Parallax6.png" id="19_puyg7"]
[ext_resource type="PackedScene" uid="uid://0sa1stdqcgc3" path="res://GraphicObjects/ItemString.tscn" id="20_flg1a"]
[ext_resource type="Texture2D" uid="uid://b2bwrdtjw6w6n" path="res://Graphics/fuzzy_dice.png" id="21_ixryl"]
[ext_resource type="Shader" path="res://InteractableObjects/Overworld.gdshader" id="21_urlx5"]
[ext_resource type="Script" path="res://Menus/SwingingObject.gd" id="22_gvsy4"]
[ext_resource type="Texture2D" uid="uid://dddfdxduqxuwt" path="res://Graphics/MainMenu_Parallax8.png" id="23_g6rih"]
[ext_resource type="Theme" uid="uid://c85e41jmw6i0p" path="res://Menus/NormalButtonTheme.tres" id="24_e1q37"]
[ext_resource type="PackedScene" uid="uid://dhaoup6hj3t7l" path="res://SFX/SFXVolumeHandler.tscn" id="30_hkur4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jwv6m"]
shader = ExtResource("21_urlx5")
shader_parameter/scanline_count = 50.0

[sub_resource type="CanvasTexture" id="CanvasTexture_03xxf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3qd8k"]
atlas = ExtResource("15_byy4g")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fim7a"]
atlas = ExtResource("15_byy4g")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtftp"]
atlas = ExtResource("15_byy4g")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cae6v"]
atlas = ExtResource("15_byy4g")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2ifmk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qd8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fim7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtftp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cae6v")
}],
"loop": true,
"name": &"MG",
"speed": 30.0
}]

[node name="DrivingEnding" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ppvel")

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
script = ExtResource("2_vuask")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer3"]
visible = false
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -361.0
offset_top = -421.0
offset_right = -197.0
offset_bottom = -250.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.735, 1.735)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer3/MarginContainer"]
modulate = Color(1, 1, 1, 0.745098)
layout_mode = 2
size_flags_vertical = 4

[node name="Quit Game" type="Button" parent="CanvasLayer3/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("24_e1q37")
text = "Thank you for playing!"

[node name="CarEngine" type="AudioStreamPlayer2D" parent="CanvasLayer3/MarginContainer"]
stream = ExtResource("17_3syp1")

[node name="CarEngine2" type="AudioStreamPlayer2D" parent="CanvasLayer3/MarginContainer"]
stream = ExtResource("17_3syp1")

[node name="CarEngineStart" type="AudioStreamPlayer2D" parent="CanvasLayer3/MarginContainer"]
stream = ExtResource("18_t534n")

[node name="StartGame" type="AudioStreamPlayer2D" parent="CanvasLayer3/MarginContainer"]
stream = ExtResource("19_ewooo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TimerDisplay" parent="CanvasLayer" instance=ExtResource("2_u5gd3")]
unique_name_in_owner = true
offset_left = 27.0
offset_top = 22.0
offset_right = 67.0
offset_bottom = 62.0
scale = Vector2(1.72, 1.6)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/normal_font = ExtResource("3_yyik2")
text = " 0:00:00.0"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 3
layout_mode = 0
offset_left = -360.0
offset_top = -240.0
offset_right = -196.0
offset_bottom = -69.0001
scale = Vector2(11.8958, 6.38123)
color = Color(0, 0, 0, 1)

[node name="DialogueBox" parent="." instance=ExtResource("4_kprul")]
unique_name_in_owner = true
layer = 2

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer2"]
material = SubResource("ShaderMaterial_jwv6m")
offset_left = -823.0
offset_top = -463.0
offset_right = 2166.0
offset_bottom = 1503.0
texture = SubResource("CanvasTexture_03xxf")

[node name="MainMenuBg" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = -1
texture_filter = 1
position = Vector2(639, 351)
scale = Vector2(7.23, 5.84)
texture = ExtResource("9_eeuhh")
script = ExtResource("10_oc5si")
metadata/Macguffin3 = ["When  I  first  lost  you,  those  around  me  told  me  it  would  be  helpful  to  forget.", "They  told  me  I  needed  to  get  my  mind  off  of  you.  That  obsessing  over  your  death  would  be  the  end  of  me.", "I  think  they  were  right.  But  I  couldn't  just  forget  you  completely.  You  were  our  everything.", "And  then  I  started  taking  what  they  said  to  heart.  I  was  numb.", "But  coming  back  here  to  our  home  taught  me  that  I  am  capable  of  more  than  I  thought  I  was.", "I  am  still  capable  of  sadness.  I  am  still  capable  of  joy.", "I  am  capable  of  mourning  you  and  still  moving  forward-  living  my  life.  Because  that's  what  you  wanted  for  us.", "That's  what  you  still  want  for  me,  isn't  it?  You  want  me  to  live  my  life  for  the  both  of  us.", "That's  what  I'll do.  I'll  live  life  and  never  forget  you  all  the  while."]
metadata/Macguffin = ["I  don't  know  if  I  made  the  right  choice.  I  think  I've  never  been                less  sure  of  anything  in  my  life.", "But  when  I  think  about  the  horrible  \"what-if\"s  like  usual... this  SHOULD  count  as  a  positive.", "But  my  pain  is  still  there.  I'm  starting  to  think  it  won't  ever  leave.", "It's  the  worst  pain  I've  ever  known.", "So  this  memento...  Our  family  crest.  I  need  more  of  this  going  forward.", "A  sense  of  connection  to  them.  They   don't  have  to  be  here  for  me  to  keep  loving  them.", "I  miss  them-  more  than  anything-  but  respecting  them.  Honoring  them.  Remembering  them.", "That's  enough,  now."]

[node name="Macguffin" type="AnimatedSprite2D" parent="MainMenuBg"]
unique_name_in_owner = true
visible = false
z_index = -1
texture_filter = 1
position = Vector2(-63.6238, 0)
rotation = 0.576355
scale = Vector2(0.876334, 1.02711)
skew = -0.543924
sprite_frames = SubResource("SpriteFrames_2ifmk")
animation = &"MG"
autoplay = "MG"
frame_progress = 0.0997007
flip_h = true
metadata/DIALOGUE = ["(I  guess  I  should've  expected  this...)", "(This  is  rather  beautiful.  I  wonder  if  you  would've  liked  this  as              much  as  I  do  right  now.)", "(But  there's  no  going  back  now.  I  could  have  saved  you.  Maybe              this  is  for  the  best, though.)", "(The  world  is  so  much  bigger  than  us-  I  see  that  now.)", "(I  just  wish  I  could  see  you  one  last  time.)"]
metadata/ROBOT = ["(I  guess  I  should've  expected  this...)", "(Even  if  I'd  found  the  power  to  bring  you  back... would  you  have              even  wanted  to  live  in  a  world  like  that?)", "(A  world  where  it  would  just  be  us?)", "(As  cold  as  the  new  skin  I  wear  is-  at  least  your  mother's  not  a  murderer.)"]
metadata/MACGUFFIN2 = ["(I...)", "(I  couldn't  go  through  with  it.)", "(I  want  so  badly  for  you  to  be  alive  here  with  me  in  this  world  again.)", "(But  I  can't  do  it  at  the  cost  of  everybody  else.  I  won't  become  that  monster.)", "(I'm  sorry,  Jenesis...  Broderick...)"]
metadata/MACGUFFIN3 = ["(Can  you  see  it?)", "(This  boundless  sea  of  stars?)", "(It  was  always  what  you  talked  about  before  we  went  to                      sleep.)", "(So  excited  to  learn  anything  you  could  about  my  work.  It  was  all  I  could  do  just  to  keep  you  entertained.  Otherwise,  you'd                      just  wander  off  to  wherever  you  pleased.)", "(Now  you  and  I  will  sleep  here.)", "(Together,  among  this  radiant  universe  that  I  wish  you  got  to                      see  more  of.  I  wish  you  could  have  shown  me  more  of  what  made  it  so  wondrous  to  you.)", "(I  love  you,  Jenesis.)"]
metadata/MACGUFFIN = ["(I'm  content  with  this...)", "(I  came  here  to  bring  you  both  back.  But  finding  our  most                  treasured  memory  here...)", "(This  flag...  our  family's  flag.  Our  family's  livelihood.  I  remember  exactly  what  you  mean  to  me.)", "(My  memories  of  you  are  all  I  have  anymore.  So  what  more                      could  I  need?)", "(I'll  see  you  soon,  my  loves.)"]

[node name="Macguffin2" type="Sprite2D" parent="MainMenuBg"]
unique_name_in_owner = true
visible = false
z_index = 1
texture_filter = 1
position = Vector2(-66.8369, 66.9089)
rotation = -0.605305
scale = Vector2(1, 1.118)
skew = 0.181232
texture = ExtResource("16_ktxi7")
metadata/DIALOGUE = ["(I  guess  I  should've  expected  this...)", "(This  is  rather  beautiful.  I  wonder  if  you  would've  liked  this  as              much  as  I  do  right  now.)", "(But  there's  no  going  back  now.  I  could  have  saved  you.  Maybe              this  is  for  the  best, though.)", "(The  world  is  so  much  bigger  than  us-  I  see  that  now.)", "(I  just  wish  I  could  see  you  one  last  time.)"]
metadata/ROBOT = ["(I  guess  I  should've  expected  this...)", "(Even  if  I'd  found  the  power  to  bring  you  back... would  you  have              even  wanted  to  live  in  a  world  like  that?)", "(A  world  where  it  would  just  be  us?)", "(As  cold  as  the  new  skin  I  wear  is-  at  least  your  mother's  not  a  murderer.)"]
metadata/MACGUFFIN2 = ["(I...)", "(I  couldn't  go  through  with  it.)", "(I  want  so  badly  for  you  to  be  alive  here  with  me  in  this  world  again.)", "(But  I  can't  do  it  at  the  cost  of  everybody  else.  I  won't  become  that  monster.)", "(I'm  sorry,  Jenesis...  Broderick...)"]
metadata/MACGUFFIN3 = ["(Can  you  see  it?)", "(This  boundless  sea  of  stars?)", "(It  was  always  what  you  talked  about  before  we  went  to                      sleep.)", "(So  excited  to  learn  anything  you  could  about  my  work.  It  was  all  I  could  do  just  to  keep  you  entertained.  Otherwise,  you'd                      just  wander  off  to  wherever  you  pleased.)", "(Now  you  and  I  will  sleep  here.)", "(Together,  among  this  radiant  universe  that  I  wish  you  got  to                      see  more  of.  I  wish  you  could  have  shown  me  more  of  what  made  it  so  wondrous  to  you.)", "(I  love  you,  Jenesis.)"]
metadata/MACGUFFIN = ["(I'm  content  with  this...)", "(I  came  here  to  bring  you  both  back.  But  finding  our  most                  treasured  memory  here...)", "(This  flag...  our  family's  flag.  Our  family's  livelihood.  I  remember  exactly  what  you  mean  to  me.)", "(My  memories  of  you  are  all  I  have  anymore.  So  what  more                      could  I  need?)", "(I'll  see  you  soon,  my  loves.)"]

[node name="Macguffin3" type="Sprite2D" parent="MainMenuBg"]
unique_name_in_owner = true
visible = false
texture_filter = 1
position = Vector2(-1.90735e-06, 0)
texture = ExtResource("10_56rcf")
metadata/DIALOGUE = ["(I  guess  I  should've  expected  this...)", "(This  is  rather  beautiful.  I  wonder  if  you  would've  liked  this  as              much  as  I  do  right  now.)", "(But  there's  no  going  back  now.  I  could  have  saved  you.  Maybe              this  is  for  the  best, though.)", "(The  world  is  so  much  bigger  than  us-  I  see  that  now.)", "(I  just  wish  I  could  see  you  one  last  time.)"]
metadata/ROBOT = ["(I  guess  I  should've  expected  this...)", "(Even  if  I'd  found  the  power  to  bring  you  back... would  you  have              even  wanted  to  live  in  a  world  like  that?)", "(A  world  where  it  would  just  be  us?)", "(As  cold  as  the  new  skin  I  wear  is-  at  least  your  mother's  not  a  murderer.)"]
metadata/MACGUFFIN2 = ["(I...)", "(I  couldn't  go  through  with  it.)", "(I  want  so  badly  for  you  to  be  alive  here  with  me  in  this  world  again.)", "(But  I  can't  do  it  at  the  cost  of  everybody  else.  I  won't  become  that  monster.)", "(I'm  sorry,  Jenesis...  Broderick...)"]
metadata/MACGUFFIN3 = ["(Can  you  see  it?)", "(This  boundless  sea  of  stars?)", "(It  was  always  what  you  talked  about  before  we  went  to                      sleep.)", "(So  excited  to  learn  anything  you  could  about  my  work.  It  was  all  I  could  do  just  to  keep  you  entertained.  Otherwise,  you'd                      just  wander  off  to  wherever  you  pleased.)", "(Now  you  and  I  will  sleep  here.)", "(Together,  among  this  radiant  universe  that  I  wish  you  got  to                      see  more  of.  I  wish  you  could  have  shown  me  more  of  what  made  it  so  wondrous  to  you.)", "(I  love  you,  Jenesis.)"]
metadata/MACGUFFIN = ["(I'm  content  with  this...)", "(I  came  here  to  bring  you  both  back.  But  finding  our  most                  treasured  memory  here...)", "(This  flag...  our  family's  flag.  Our  family's  livelihood.  I  remember  exactly  what  you  mean  to  me.)", "(My  memories  of  you  are  all  I  have  anymore.  So  what  more                      could  I  need?)", "(I'll  see  you  soon,  my  loves.)"]

[node name="ItemString" parent="." instance=ExtResource("20_flg1a")]
visible = false
position = Vector2(687, 31)
scale = Vector2(5.2037, 5.24074)
script = ExtResource("14_hcc3f")

[node name="FuzzyDice" type="Sprite2D" parent="ItemString"]
texture_filter = 1
position = Vector2(-1.53738, 19.2721)
scale = Vector2(0.960854, 0.954064)
texture = ExtResource("21_ixryl")
script = ExtResource("22_gvsy4")

[node name="CarEngine" type="AudioStreamPlayer2D" parent="ItemString"]
stream = ExtResource("17_3syp1")

[node name="CarEngine2" type="AudioStreamPlayer2D" parent="ItemString"]
stream = ExtResource("17_3syp1")

[node name="CarEngineStart" type="AudioStreamPlayer2D" parent="ItemString"]
stream = ExtResource("18_t534n")

[node name="StartGame" type="AudioStreamPlayer2D" parent="ItemString"]
unique_name_in_owner = true
stream = ExtResource("19_ewooo")

[node name="MainMenuParallax0" type="Sprite2D" parent="."]
z_index = -3
texture_filter = 1
position = Vector2(1920, 396)
scale = Vector2(7.23034, 5.84)
texture = ExtResource("11_bli12")
script = ExtResource("12_6jddx")
metadata/looping_position = -1930
metadata/starting_position = 5770
metadata/speed = 50

[node name="MainMenuParallax0_1" type="Sprite2D" parent="."]
z_index = -3
texture_filter = 1
position = Vector2(5770, 396)
scale = Vector2(7.23034, 5.84)
texture = ExtResource("13_kp5pk")
script = ExtResource("12_6jddx")
metadata/looping_position = -1930
metadata/starting_position = 5770
metadata/speed = 50

[node name="MainMenuParallax1" type="Sprite2D" parent="."]
z_index = -4
texture_filter = 1
position = Vector2(1930, 472.28)
scale = Vector2(7.23034, 5.84)
texture = ExtResource("14_k0h56")
script = ExtResource("12_6jddx")
metadata/looping_position = -1910
metadata/starting_position = 5770
metadata/speed = 30

[node name="MainMenuParallax1_1" type="Sprite2D" parent="."]
z_index = -4
texture_filter = 1
position = Vector2(5770, 472.28)
scale = Vector2(7.23034, 5.84)
texture = ExtResource("14_k0h56")
script = ExtResource("12_6jddx")
metadata/looping_position = -1910
metadata/starting_position = 5770
metadata/speed = 30

[node name="MainMenuParallax3" type="Sprite2D" parent="."]
z_index = -5
texture_filter = 1
position = Vector2(1925, 540.28)
scale = Vector2(7.23034, 5.84)
texture = ExtResource("15_0a4tv")
script = ExtResource("12_6jddx")
metadata/looping_position = -1935
metadata/starting_position = 5785
metadata/speed = 5

[node name="MainMenuParallax3_1" type="Sprite2D" parent="."]
z_index = -5
texture_filter = 1
position = Vector2(5785, 540.28)
scale = Vector2(7.23034, 5.84)
texture = ExtResource("15_0a4tv")
script = ExtResource("12_6jddx")
metadata/looping_position = -1935
metadata/starting_position = 5785
metadata/speed = 5

[node name="MainMenuParallax4" type="Sprite2D" parent="."]
z_index = -6
texture_filter = 1
position = Vector2(1930, 453.28)
scale = Vector2(7.23034, 5.84)
texture = ExtResource("16_bo388")
script = ExtResource("12_6jddx")
metadata/looping_position = -1930
metadata/starting_position = 5770
metadata/speed = 2

[node name="MainMenuParallax4_1" type="Sprite2D" parent="."]
z_index = -6
texture_filter = 1
position = Vector2(5770, 453.28)
scale = Vector2(7.23034, 5.84)
texture = ExtResource("16_bo388")
script = ExtResource("12_6jddx")
metadata/looping_position = -1930
metadata/starting_position = 5770
metadata/speed = 2

[node name="MainMenuParallax5" type="Sprite2D" parent="."]
z_index = -7
texture_filter = 1
position = Vector2(1930, 412.28)
scale = Vector2(7.23034, 5.84)
texture = ExtResource("17_tewdt")
script = ExtResource("12_6jddx")
metadata/looping_position = -1930
metadata/starting_position = 5770
metadata/speed = 1

[node name="MainMenuParallax5_1" type="Sprite2D" parent="."]
z_index = -7
texture_filter = 1
position = Vector2(5770, 409.28)
scale = Vector2(7.23034, 5.84)
texture = ExtResource("17_tewdt")
script = ExtResource("12_6jddx")
metadata/looping_position = -1930
metadata/starting_position = 5770
metadata/speed = 1

[node name="MainMenuParallax6" type="Sprite2D" parent="."]
z_index = -6
texture_filter = 1
position = Vector2(-29, 306)
scale = Vector2(1, 0.808)
texture = ExtResource("18_j4rsn")
flip_h = true

[node name="MainMenuParallax7" type="Sprite2D" parent="."]
visible = false
z_index = -7
texture_filter = 1
position = Vector2(1168, 280)
scale = Vector2(4.38, 3.538)
texture = ExtResource("19_puyg7")

[node name="MainMenuParallax8" type="Sprite2D" parent="."]
z_index = -7
texture_filter = 1
position = Vector2(369, 464)
scale = Vector2(3, 2.423)
texture = ExtResource("23_g6rih")
metadata/looping_position = -1930
metadata/starting_position = 5770
metadata/speed = 50

[node name="SFXVolumeHandler" parent="." instance=ExtResource("30_hkur4")]
unique_name_in_owner = true

[connection signal="pressed" from="CanvasLayer3/MarginContainer/VBoxContainer/Quit Game" to="." method="_on_quit_game_pressed"]
